--- a/Pages/Contact-Us.html
+++ b/Pages/Contact-Us.html
@@ -70,16 +70,16 @@
             <p>We at Gauras provide the best A2 milk and organic products direct to your home from the farm.</p>
             <div class="contact-block">
                 <img src="../Images/address-card-logo.png">
-                <p>Gauras Enterprise, Vishnu Bihar Colony Sitarampur, West Burdwan, W.B. 713359</p>
+                <p>Gauras Enterprise, Uttarakhand</p>
             </div>
             <div class="contact-block">
                 <img src="../Images/phone-logo.png">
-                <p>+91-8250420716</p>
+                <p>+91-9304692093</p>
 
             </div>
             <div class="contact-block">
                 <img src="../Images/@-logo.png">
-                <p>connectgauras@gmail.com</p>
+                <p>connectgauras_me@gmail.com</p>
             </div>
         </div>
 
@@ -148,16 +148,16 @@
                     <p>We at Gauras provide the best A2 milk and organic products direct to your home from the farm.</p>
                     <div class="contact-block">
                         <img src="../Images/address-card-logo.png">
-                        <p>Gauras Enterprise, Vishnu Bihar Colony Sitarampur, West Burdwan, W.B. 713359</p>
+                        <p>Gauras Enterprise, Uttarakhand</p>
                     </div>
                     <div class="contact-block">
                         <img src="../Images/phone-logo.png">
-                        <p>+91-8250420716</p>
+                        <p>+91-9304692093</p>
 
                     </div>
                     <div class="contact-block">
                         <img src="../Images/@-logo.png">
-                        <p>connectgauras@gmail.com</p>
+                        <p>connectgauras_me@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
     </footer>
     <div id="footer-banner">
 
-        <P> &#174;Powered by<span><a href="https://www.infometrix.tech"> Infometrix Technologies</a></span></P>
+        <P> &#174;Powered by<span><a href="https://github.com/princeprabhat/Gauras"> Prince Prabhat</a></span></P>
     </div>
 
     <!---Form Validation and SMPT setup-->
@@ -241,10 +241,10 @@
 
             Email.send({
                 Host: "smtp.elasticemail.com",
-                Username: "connect@gauras.co.in",
-                Password: "FB88BC6803710AA087F05DA24BDA65214C68",
-                To: 'connectgauras@gmail.com',
-                From: "connect@gauras.co.in",
+                Username: "",
+                Password: "",
+                To: 'connectgauras_me@gmail.com',
+                From: "connect@gauras_me.co.in",
                 Subject: `You have a query from ${name}`,
                 Body: `${bodyFormat}`
 
